--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@500;600;700&display=swap"
-  rel="stylesheet"
-/>
-
-
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>room-booking-ui</title>
 
-    <!-- Google Fonts -->
+    <title>Journey Junction Munnar | Luxury Villa & Curated Travel Experiences</title>
+    <meta name="title" content="Journey Junction Munnar | Luxury Villa & Curated Travel Experiences">
+    <meta name="description" content="Discover the ultimate Munnar experience with Journey Junction. Premium luxury stay at Dazzling Villa, exclusive 4x4 off-road treks, and bespoke mountain expeditions.">
+    <meta name="keywords" content="Munnar Luxury Villa, Journey Junction, Dazzling Villa Munnar, Thar 4x4 Munnar, Munnar Trekking, Luxury Stay Kerala">
+    <meta name="author" content="Journey Junction Munnar">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://journeyjunctionmunnar.com/">
+    <meta property="og:title" content="Journey Junction Munnar | Luxury Villa & Experiences">
+    <meta property="og:description" content="Book your premium stay and adventure tours in Munnar. Luxury suites, Thar 4x4 expeditions, and local expertise.">
+    <meta property="og:image" content="/og-preview-image.jpg">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Montserrat:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Montserrat:wght@400;500;600;700&family=Playfair+Display:ital,wght@0,600;0,700;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+
+    <style>
+      /* Smooth scroll behavior for a premium feel */
+      html {
+        scroll-behavior: smooth;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #0A0F0A; /* Matches your theme background color */
+        overflow-x: hidden;
+      }
+    </style>
   </head>
 
   <body>
