Optimize SEO, add sitemap and Google verification

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="google-site-verification" content="YOUR_CODE_HERE" />
+
     <title>Journey Junction Munnar | Luxury Villa & Curated Travel Experiences</title>
     <meta name="title" content="Journey Junction Munnar | Luxury Villa & Curated Travel Experiences">
-    <meta name="description" content="Discover the ultimate Munnar experience with Journey Junction. Premium luxury stay at Dazzling Villa, exclusive 4x4 off-road treks, and bespoke mountain expeditions.">
-    <meta name="keywords" content="Munnar Luxury Villa, Journey Junction, Dazzling Villa Munnar, Thar 4x4 Munnar, Munnar Trekking, Luxury Stay Kerala">
+    <meta name="description" content="Experience the mist of the highlands at Journey Junction Munnar. Premium stay at Dazzling Villa, exclusive Thar 4x4 off-road treks, and bespoke mountain expeditions.">
+    <meta name="keywords" content="Munnar Luxury Villa, Journey Junction Munnar, Dazzling Villa Munnar, Thar 4x4 Munnar, Munnar Trekking, Luxury Stay Kerala, Best resort in Munnar">
     <meta name="author" content="Journey Junction Munnar">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://journeyjunctionmunnar.com/">
-    <meta property="og:title" content="Journey Junction Munnar | Luxury Villa & Experiences">
-    <meta property="og:description" content="Book your premium stay and adventure tours in Munnar. Luxury suites, Thar 4x4 expeditions, and local expertise.">
-    <meta property="og:image" content="/og-preview-image.jpg">
+    <meta property="og:url" content="https://www.journeyjunctionmunnar.com/">
+    <meta property="og:title" content="Journey Junction Munnar | Escape to the Highlands">
+    <meta property="og:description" content="Book your premium luxury stay and Thar 4x4 mountain expeditions in Munnar. Experience bespoke hospitality above the clouds.">
+    <meta property="og:image" content="https://www.journeyjunctionmunnar.com/home.jpeg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,15 +27,27 @@
     />
 
     <style>
-      /* Smooth scroll behavior for a premium feel */
       html {
         scroll-behavior: smooth;
       }
       body {
         margin: 0;
         padding: 0;
-        background-color: #0A0F0A; /* Matches your theme background color */
+        background-color: #0A0F0A; /* Prevents white flash on reload */
+        color: white;
         overflow-x: hidden;
+        font-family: 'Inter', sans-serif;
+      }
+      /* Hide scrollbar for a cleaner premium look but keep functionality */
+      ::-webkit-scrollbar {
+        width: 6px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #0A0F0A;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #C9A24D;
+        border-radius: 10px;
       }
     </style>
   </head>
