--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="google-site-verification" content="YOUR_CODE_HERE" />
+   
+    <meta name="google-site-verification" content="5iGj1_in8RXS4l3kXCi7pPgTGPoWitXrCGga_jFQ1oY" />
 
     <title>Journey Junction Munnar | Luxury Villa & Curated Travel Experiences</title>
     <meta name="title" content="Journey Junction Munnar | Luxury Villa & Curated Travel Experiences">
